# aisci

./: .claude.md  .env.example  .gitignore  .gitmodules  .onyxignore  ACTION_PLAN.md  AGENTS.md  CHANGELOG.md  MEGAPROMPT_DASHBOARD.md  MEGAPROMPT_DASHBOARD_PHASE_6.md  MEGAPROMPT_FIX_ALL.md  MEGAPROMPT_PHD_UPGRADE.md  MULTICA_SETUP.md  README.md  check_skills.py  config.toml  cookies.txt  f76b_transcript.jsonl  fallback_instructions.txt  grep_out.txt  hardness_check.py  hardness_compensation.py  mcp_config.yaml  migration_report.md  numerical_discovery.py  opensearch_logs.txt  package-lock.json  package.json  persona_0.json  persona_0_patched.json  persona_3.json  persona_3_patched.json  persona_7.json  persona_7_patched.json  persona_8.json  persona_8_patched.json  pytest.ini  run_parallel_gpu.sh  setup.sh  setup_onyx_mcp.sh  (+4 more)
physics/: cli.py  conftest.py  pyproject.toml  requirements.txt
physics/dashboard/: README.md  backend.py  backend_simple.py  collector.py  index.html
physics/data/: fit_input_ins1684320.csv  fit_input_ins1735345_meta.json  fit_input_mock_v0m.csv
physics/src/: __init__.py  bgbw_fit.py  bgbw_identified_fit.py  bgbw_jax_autodiff.py  bgbw_mcmc.py  bgbw_minos_contours.py  boson_paper_analysis.py  data_loader.py  exact_be_fit_range_scan.py  exact_be_grid_scan.py  fetch_bibtex.py  fisher_information.py  fitting_pipeline.py  generate_bib.py  generate_synthetic_data.py  jacobian_proof.py  ml_pipeline.py  nch_response_matrix.py  rag_claim_verifier.py  reproduce_biro_2025.py  run_validation.py  s2_jacobian_check.py  sympy_validation_agent.py  (+3 more)
(+3168 files in other folders)
