[project]
name = "physics"
version = "0.1.0"
description = "High Energy Physics numerical analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "matplotlib>=3.8,<4",
    "pandas>=2.2,<3",
    "sympy>=1.12,<2",
    "iminuit>=2.25,<3",
    "antlr4-python3-runtime==4.11.1",
    "pytest>=8.0,<9"
]
