[project]
name = "ignition"
version = "0.1.0"
description = "AiSci RAG and literature intake pipelines"
dependencies = [
    "requests",
    "pydantic",
    "fastapi",
    "uvicorn",
    "pandas",
    "marko",
    "scipy"
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pytest-cov"
]
